# EKGapp

./: .gitignore  CMakeLists.txt  Main.qml  README.md  main.cpp
android/: AndroidManifest.xml
android/src/org/qtproject/calqlatr/: ExampleHandler.java
src/handlers/: hdf5_handler.h
